<resources>
    <!-- App and navigation -->
    <string name="app_name">NumPairs</string>
    <string name="back_button_content_description">Back</string>

    <!-- Menu screen -->
    <string name="menu_resume_button">Resume</string>
    <string name="menu_resume_content_description">Resume %1$s puzzle</string>
    <string name="menu_daily_start_button">Daily challenge</string>
    <string name="menu_daily_continue_button">Continue daily</string>
...
